// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Nav/Header/MoreAction should match snapshot 1`] = `
<body>
  <div>
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger header-more-icon ant-dropdown-open"
      data-testid="more-action-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-dropdown"
        style="opacity: 0; pointer-events: none;"
      >
        <ul
          class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        >
          <li
            class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
            data-menu-id="rc-menu-uuid-test-version"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="ant-dropdown-menu-title-content"
            >
              system.log.version
            </span>
          </li>
          <li
            class="ant-dropdown-menu-item-divider"
          />
          <li
            class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
            data-menu-id="rc-menu-uuid-test-reportStatistics"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="ant-dropdown-menu-title-content"
            >
              menu.reportStatistics
            </span>
          </li>
          <li
            class="ant-dropdown-menu-item-divider"
          />
          <li
            class="ant-dropdown-menu-item-group"
          >
            <div
              class="ant-dropdown-menu-item-group-title"
              title="menu.platformManage"
            >
              menu.platformManage
            </div>
            <ul
              class="ant-dropdown-menu-item-group-list"
            >
              <li
                class="ant-dropdown-menu-item-group"
              >
                <div
                  class="ant-dropdown-menu-item-group-title"
                  title="menu.userCenter"
                >
                  menu.userCenter
                </div>
                <ul
                  class="ant-dropdown-menu-item-group-list"
                >
                  <li
                    class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                    data-menu-id="rc-menu-uuid-test-user"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-dropdown-menu-title-content"
                    >
                      menu.user
                    </span>
                  </li>
                  <li
                    class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                    data-menu-id="rc-menu-uuid-test-role"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-dropdown-menu-title-content"
                    >
                      menu.role
                    </span>
                  </li>
                  <li
                    class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                    data-menu-id="rc-menu-uuid-test-userGroup"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <span
                      class="ant-dropdown-menu-title-content"
                    >
                      menu.userGroup
                    </span>
                  </li>
                </ul>
              </li>
              <li
                class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                data-menu-id="rc-menu-uuid-test-ruleTemplate"
                role="menuitem"
                tabindex="-1"
              >
                <span
                  class="ant-dropdown-menu-title-content"
                >
                  menu.ruleTemplate
                </span>
              </li>
              <li
                class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                data-menu-id="rc-menu-uuid-test-systemSetting"
                role="menuitem"
                tabindex="-1"
              >
                <span
                  class="ant-dropdown-menu-title-content"
                >
                  menu.systemSetting
                </span>
              </li>
            </ul>
          </li>
        </ul>
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`test Nav/Header/MoreAction should match snapshot 2`] = `
<body>
  <div>
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger header-more-icon ant-dropdown-open"
      data-testid="more-action-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-dropdown"
        style="opacity: 0; pointer-events: none;"
      >
        <ul
          class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        >
          <li
            class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
            data-menu-id="rc-menu-uuid-test-version"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="ant-dropdown-menu-title-content"
            >
              system.log.version
            </span>
          </li>
          <li
            class="ant-dropdown-menu-item-divider"
          />
          <li
            class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
            data-menu-id="rc-menu-uuid-test-reportStatistics"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="ant-dropdown-menu-title-content"
            >
              menu.reportStatistics
            </span>
          </li>
          <li
            class="ant-dropdown-menu-item-divider"
          />
        </ul>
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </div>
  </div>
</body>
`;
